appId: xyz.blueskyweb.app
---
- launchApp:
   appId: "xyz.blueskyweb.app"
   clearState: true
- waitForAnimationToEnd
- tapOn: "http://localhost:8081"
- waitForAnimationToEnd
- extendedWaitUntil:
    visible: "Continue"
- swipe:
   from: "Tellus"
   direction: DOWN
- tapOn:
   id: e2eProxyHeaderInput
- inputText: ${output.result}
- pressKey: Enter
- hideKeyboard
